--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>My Website <span class="orange-highlight">Pallab  Mondol</span></h1>
     <h3>World-class professional web devloper</h3>
     <p> I am a web developer and web designer, how do I get new customers? I find this very very hard though my clients love my work and have recommended me Believe me, people are looking for good web dev/design people. Here's some thoughts:</p>
-    <a class="link-button" target="blsnk" href="">HIRE ME</a>
+    <a class="link-button" target="blank" href="">HIRE ME</a>
         </div>
        <div class="half-width">
         <img src="images/pallab2.png">
